apply styling to the elememt

--- a/src/app/imagesearch/imagesearch.component.html
+++ b/src/app/imagesearch/imagesearch.component.html
@@ -3,5 +3,6 @@
 <p>
   will perform image search for the keyword speccified
   imagesearch works!
+  Received search word is {{searchWord}}
 </p>
 </div>
