--- a/src/app/imagesearch/imagesearch.component.html
+++ b/src/app/imagesearch/imagesearch.component.html
@@ -1,9 +1,13 @@
 <div>
 <h2>Image Search here....</h2>
 <p>
-  will perform image search for the keyword speccified
+  will perform image search for the keyword specified
   imagesearch works!
   Received search word is {{searchWord}}
 </p>
-{{imageLinks.length}}
+<ul id="thumbnailList">
+ <li *ngFor="let link of imageLinks">
+   <img src={{link}} class="tn" height="146" width="160"/>
+ </li>  
+</ul>  
 </div>
